pycharm-bin: Update to 2023.2.1
* Use PREFIX/PKGBASE instead of PKGNAME.

Changelog:
* New UI control.
* GitLab integration.
* Search text improvement.
* Improved menu.
* Enable sort by filename.
and so on.